[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lzreposync"
version = "0.1"
dependencies = [
     "memory_profiler",
     "pytest",
     "requests",
     "python-gnupg",
     "pycurl",
     "pyopenssl",
     "psycopg2-binary",
     "urlgrabber",
     "python-debian",
     "python-dateutil",
     "looseversion"
]

[project.scripts]
lzreposync = "lzreposync:main"
